--- a/pom.xml
+++ b/pom.xml
@@ -1,69 +1,57 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>com.jmejfx</groupId>
-  <artifactId>jmejfxtest</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
-  
-  <properties>
-    <maven.compiler.source>1.8</maven.compiler.source>
-    <maven.compiler.target>1.8</maven.compiler.target>
-  </properties>
-  
-  
-  <repositories>
-    <repository>
-        <snapshots>
-            <enabled>false</enabled>
-        </snapshots>
-        <id>bintray-javasabr-maven</id>
-        <name>bintray</name>
-        <url>https://dl.bintray.com/javasabr/maven</url>
-    </repository>
-    
-            <repository>
+<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
+    <groupId>com.jmejfx</groupId>
+    <artifactId>jmejfxtest</artifactId>
+    <version>0.0.1-SNAPSHOT</version>
+
+    <properties>
+        <maven.compiler.source>1.10</maven.compiler.source>
+        <maven.compiler.target>1.10</maven.compiler.target>
+    </properties>
+
+    <repositories>
+        <repository>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+            <id>bintray-javasabr-maven</id>
+            <name>bintray</name>
+            <url>https://dl.bintray.com/javasabr/maven</url>
+        </repository>
+        <repository>
             <id>spring-plugins-release</id>
             <url>http://repo.spring.io/plugins-release</url>
             <snapshots>
                 <enabled>false</enabled>
             </snapshots>
         </repository>
-        
-        
-                        <repository>
-                    <snapshots>
-                        <enabled>false</enabled>
-                    </snapshots>
-                    <id>bintray-jmonkeyengine-org.jmonkeyengine</id>
-                    <name>bintray</name>
-                    <url>https://dl.bintray.com/jmonkeyengine/org.jmonkeyengine</url>
-                </repository>
-                
-                
-                
-        
-</repositories>
+        <repository>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+            <id>bintray-jmonkeyengine-org.jmonkeyengine</id>
+            <name>bintray</name>
+            <url>https://dl.bintray.com/jmonkeyengine/org.jmonkeyengine</url>
+        </repository>
+    </repositories>
 
-<dependencies>
-<dependency>
-    <groupId>com.jme3</groupId>
-    <artifactId>jfx</artifactId>
-    <version>2.0.0</version>
-</dependency>
-
-
-<dependency>
-    <groupId>org.jmonkeyengine</groupId>
-    <artifactId>jme3-lwjgl3</artifactId>
-    <version>3.2.1-stable</version>
-      <type>jar</type>
-</dependency>
-
-
-
-	<dependency>
-		<groupId>org.jmonkeyengine</groupId>
-		<artifactId>jme3-core</artifactId>
-		<version>3.2.1-stable</version>
-	</dependency>
-</dependencies>
+    <dependencies>
+        <dependency>
+            <groupId>com.jme3</groupId>
+            <artifactId>jfx</artifactId>
+            <version>2.0.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.jmonkeyengine</groupId>
+            <artifactId>jme3-lwjgl3</artifactId>
+            <version>3.2.1-stable</version>
+            <type>jar</type>
+        </dependency>
+        <dependency>
+            <groupId>org.jmonkeyengine</groupId>
+            <artifactId>jme3-core</artifactId>
+            <version>3.2.1-stable</version>
+        </dependency>
+    </dependencies>
 </project>
